# BTP_IoT_security_with_Blockchain

./: .env.example  .gitignore  .gitmodules  FILE_STRUCTURE_GUIDE.md  IOT_DEVICE_COMPLETE.md  Makefile  PROTOCOL_SPECIFICATION.md  QUICKSTART.md  README.md  pi.md  start-system.sh  test-system.sh
accum/: README.md  __init__.py  accumulator.py  hash_to_prime.py  params.json  pyproject.toml  requirements-dev.txt  rsa_key_generator.py  rsa_params.py  setup.py  trapdoor_operations.py  witness_refresh.py
accum/tests/: __init__.py
accum/tests/integration/: __init__.py  test_accumulator_comprehensive.py  test_full_accumulator_flow.py  test_trapdoor_integration.py
accum/tests/unit/: __init__.py  test_accumulator.py  test_hash_to_prime.py  test_rsa_params.py  test_trapdoor_operations.py  test_witness_refresh.py
accum_server/: API_GUIDE.md  main.py  requirements.txt
contracts/: README.md  foundry.toml  lcov.info  remappings.txt
db/: supabase_schema.sql
frontend/: README.md  index.html  package-lock.json  package.json  setup.sh
gateway/: .env.multisig  README.md  __init__.py  accumulator_service.py  api_routes.py  blockchain.py  chain_client.py  config.py  database.py  db.py  env.example  logging_config.py  main.py  middleware.py  migrate_sqlite_to_supabase.py  models.py  pyproject.toml  requirements.txt  settings.py  supabase_db.py  utils.py
gateway/tests/: __init__.py
gateway/tests/integration/: __init__.py  test_api_endpoints.py
gateway/tests/unit/: __init__.py  test_config.py  test_models.py  test_utils.py
iot_device/: .env.iot  auth.py  check_enrollment.py  (+6 more)
(+29 files in other folders)
