[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gateway"
version = "0.1.0"
description = "FastAPI gateway for RSA accumulator-based IoT auth"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]~=0.30.0",
  "pydantic>=2.7",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.2",
  "web3>=6.19.0",
  "python-dotenv>=1.0.1",
  "ed25519>=1.5",
  "httpx>=0.27.0",
  "loguru>=0.7.2"
]

[tool.setuptools.packages.find]
where=["."]

